<resources>
    <string name="app_name">달력</string>
    <string name="schedule">일정</string>

    <string name="action_settings">Settings</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="hello_third_fragment">Hello third fragment</string>

    <string name="monthly">월간</string>
    <string name="weekly">주간</string>
    <string name="daily">일간</string>

    <string name="schedule_new">새 일정</string>
    <string name="schedule_view">일정 보기</string>
    <string name="schedule_name">일정 제목</string>
    <string name="date">날짜</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="modify">수정</string>
    <string name="remove">삭제</string>
    <string name="close">닫기</string>
</resources>
