<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:elevation="1dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textStyle="bold"
                android:textSize="20dp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#ffffffff"
        android:layout_margin="2dp">

        <EditText
            android:id="@+id/scheduleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:hint="@string/schedule_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:text="@string/date"/>
            <Button
                android:id="@+id/dateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="0dp"
                android:background="@drawable/button_boundary"/>
        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/scheduleContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/bottomLayout"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:gravity="left|top"
                android:background="@drawable/button_boundary"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textSize="19dp"/>

            <LinearLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:padding="0dp"
                    android:background="@drawable/button_boundary"
                    android:text="@string/save"/>
                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="0dp"
                    android:background="@drawable/button_boundary"
                    android:text="@string/cancel"/>
                <Button
                    android:id="@+id/modifyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:padding="0dp"
                    android:background="@drawable/button_boundary"
                    android:text="@string/modify"/>
                <Button
                    android:id="@+id/removeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:padding="0dp"
                    android:background="@drawable/button_boundary"
                    android:text="@string/remove"/>
                <Button
                    android:id="@+id/closeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:padding="0dp"
                    android:background="@drawable/button_boundary"
                    android:text="@string/close"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
